--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
 <head>
 <title> Github Page </title>
-<lin rel="stylesheet" href "style.css"/>
+<lin rel="stylesheet" href="style.css"/>
 </head>
 <body> 
 <p> Hey! Check it out </p>
