resume 1st attempt

--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <doctypehtml!>
 <html> 
 <head>
-<title> Github Page </title>
+<title> Resume </title>
 <lin rel="stylesheet" href="style.css"/>
 </head>
 <body> 
-<p> Hey! Check it out </p>
+
+<h1> Drew Hastings
+</h1>
+  <h2> Education </h2>
+  <ul> 
+    <li> Prime Digital Academy (Expected Graduation Spring 2017)</li>
+    <li> Kaplan University (Graduated October 2015) </li>
+    <li> Armstrong Senior Highschool (Graduated 2003) </li>
+  </ul>
+  
+  <p> Hey! Check it out </p>
 </body>
 
 
