Can you do this?

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </h1>
   <h2> Education </h2>
   <ul> 
-    <li> Prime Digital Academy (Expected Graduation Spring 2017)</li>
-    <p> Focus on Software Engineering - HTML/CSS/Java/Javascript/Jquery and more </p>
+    <li> Prime Digital Academy (Expected Graduation Spring 2017)
+    <p> Focus on Software Engineering - HTML/CSS/Java/Javascript/Jquery and more </p></li>
     <li> Kaplan University (Graduated October 2015) </li>
     <li> Armstrong Senior Highschool (Graduated 2003) </li>
   </ul>
