--- a/index.html
+++ b/index.html
@@ -6,15 +6,35 @@
 </head>
 <body> 
 
-<h1> Drew Hastings
-</h1>
-  <h2> Education </h2>
-  <ul> 
-    <li> Prime Digital Academy (Expected Graduation Spring 2017)
-    <p> Focus on Software Engineering - HTML/CSS/Java/Javascript/Jquery and more </p></li>
-    <li> Kaplan University (Graduated October 2015) </li>
-    <li> Armstrong Senior Highschool (Graduated 2003) </li>
-  </ul>
+
+<div class="Container">
+   <div class="Header">
+      <h1>Drew Hastings</h1>
+      <h2>981 Patton Rd* New Brighton, MN 55112</h2>
+      <h3>droo.hastings@gmail.com</h3>
+
+    </div>
+    <div class="headshot"> 
+    </div>  
+    <div class="Education">
+      <div id=content-prime>
+        <h1>Prime Digital Academy</h1> 
+        <h2>Software Engineering</h2> 
+      </div>
+      <ul id="school"> 
+            <li> - (expected graduation Spring 2017</li>  
+            <li>Kaplan University - Property/Casualty, Life, Accident, and Health, Series 6 and 63</li> 
+            <li>Armstrong Senior High (Graduated 2003)</li>  
+        </ul> 
+     </div>
+
+     <div class="Work Experience">
+       <ul id="work">
+            <li>Hendricksen Insurance Agency - Sales Manager (
+
+     </div>
+     </div>
+
   
   <p> Hey! Check it out </p>
 </body>
