--- a/index.html
+++ b/index.html
@@ -20,7 +20,41 @@
       <div id=content-prime>
         <h1>Prime Digital Academy</h1> 
         <h2>Software Engineering</h2> 
+        <p>Focus on HTML, CSS, Java, Java Script, and more.  This is a full stack engineering course designed specificially around the developer needs of Twin Cities employers.
+        </p>   
       </div>
+      <div id=content-Kaplan>
+        <h1>Prime Digital Academy</h1> 
+        <h2>Software Engineering</h2> 
+        <p>Focus on HTML, CSS, Java, Java Script, and more.  This is a full stack engineering course designed specificially around the developer needs of Twin Cities employers.
+        </p>   
+      </div>
+      <div id=Armstrong>
+        <h1>Prime Digital Academy</h1> 
+        <h2>Software Engineering</h2> 
+        <p>Focus on HTML, CSS, Java, Java Script, and more.  This is a full stack engineering course designed specificially around the developer needs of Twin Cities employers.
+        </p>   
+      </div> 
+    <div class=professional>
+        <div id=content-Hendricksen>
+        <h1>Prime Digital Academy</h1> 
+        <h2>Software Engineering</h2> 
+        <p>Focus on HTML, CSS, Java, Java Script, and more.  This is a full stack engineering course designed specificially around the developer needs of Twin Cities employers.
+        </p>   
+        </div> 
+       <div id=content-Rosedale>
+        <h1>Prime Digital Academy</h1> 
+        <h2>Software Engineering</h2> 
+        <p>Focus on HTML, CSS, Java, Java Script, and more.  This is a full stack engineering course designed specificially around the developer needs of Twin Cities employers.
+        </p>   
+       </div>
+       <div id=content-Sneaker>
+        <h1>Prime Digital Academy</h1> 
+        <h2>Software Engineering</h2> 
+        <p>Focus on HTML, CSS, Java, Java Script, and more.  This is a full stack engineering course designed specificially around the developer needs of Twin Cities employers.
+        </p>   
+      </div> 
+    </div>   
       <ul id="school"> 
             <li> - (expected graduation Spring 2017</li>  
             <li>Kaplan University - Property/Casualty, Life, Accident, and Health, Series 6 and 63</li> 
