--- a/index.html
+++ b/index.html
@@ -24,53 +24,33 @@
         </p>   
       </div>
       <div id=content-Kaplan>
-        <h1>Prime Digital Academy</h1> 
-        <h2>Software Engineering</h2> 
-        <p>Focus on HTML, CSS, Java, Java Script, and more.  This is a full stack engineering course designed specificially around the developer needs of Twin Cities employers.
+        <h1>Kaplan University</h1> 
+        <h2>Property, Causualty, Life, Accident, Health, Series 6 and 63 Liscenses</h2> 
+        <p>MN liscensed insurance producer in multiple insurance lines in addition to securities and investments.  Graduated October, 2015.
         </p>   
       </div>
-      <div id=Armstrong>
-        <h1>Prime Digital Academy</h1> 
-        <h2>Software Engineering</h2> 
-        <p>Focus on HTML, CSS, Java, Java Script, and more.  This is a full stack engineering course designed specificially around the developer needs of Twin Cities employers.
-        </p>   
-      </div> 
+    </div> 
+   
     <div class=professional>
         <div id=content-Hendricksen>
-        <h1>Prime Digital Academy</h1> 
-        <h2>Software Engineering</h2> 
-        <p>Focus on HTML, CSS, Java, Java Script, and more.  This is a full stack engineering course designed specificially around the developer needs of Twin Cities employers.
+        <h1>Hendricksen Insurance Agency</h1> 
+        <h2>Sales Manager</h2> 
+        <p>Responsible for meeting organization sales goals, providing training and guidance to sales staff, and maintaing ongoing continuing education certification for employees.
         </p>   
         </div> 
-       <div id=content-Rosedale>
-        <h1>Prime Digital Academy</h1> 
-        <h2>Software Engineering</h2> 
-        <p>Focus on HTML, CSS, Java, Java Script, and more.  This is a full stack engineering course designed specificially around the developer needs of Twin Cities employers.
-        </p>   
-       </div>
-       <div id=content-Sneaker>
-        <h1>Prime Digital Academy</h1> 
-        <h2>Software Engineering</h2> 
-        <p>Focus on HTML, CSS, Java, Java Script, and more.  This is a full stack engineering course designed specificially around the developer needs of Twin Cities employers.
+        <div id=content-Sneaker>
+        <h1>Sneaker 2 Bombs, LLC</h1> 
+        <h2>Owner/Marketing Manager</h2> 
+        <p>Created and Executed Partnership with Best Buy for marketing Best Buy Music, Distribution partnership with Sony Music USA, as well as day-to-day retail management.
         </p>   
       </div> 
     </div>   
-      <ul id="school"> 
-            <li> - (expected graduation Spring 2017</li>  
-            <li>Kaplan University - Property/Casualty, Life, Accident, and Health, Series 6 and 63</li> 
-            <li>Armstrong Senior High (Graduated 2003)</li>  
-        </ul> 
+ 
+
+ 
      </div>
 
-     <div class="Work Experience">
-       <ul id="work">
-            <li>Hendricksen Insurance Agency - Sales Manager (
 
-     </div>
-     </div>
-
-  
-  <p> Hey! Check it out </p>
 </body>
 
 
