--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
 <head>
 <title> Resume </title>
-<lin rel="stylesheet" href="style.css"/>
+<lin rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body> 
 
