--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html> 
 <head>
 <title> Resume </title>
-<link rel="stylesheet" type="text/css" href="style.css"/>
+<link rel="stylesheet"  href="style.css" type="text/css"/>
+   
 </head>
 <body> 
 
