--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <doctypehtml!>
 <html> 
 <head>
-<title> Resume </title>
+<title> Pork Chops </title>
 <link rel="stylesheet"  href="style.css" type="text/css"/>
+<link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
    
 </head>
 <body> 
