--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 <div class="Container">
-   <div class="Header">
+   <div class="content-contact">
       <h1>Drew Hastings</h1>
       <h2>981 Patton Rd* New Brighton, MN 55112</h2>
       <h3>droo.hastings@gmail.com</h3>
