--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
     </div>
     <div class="headshot"> 
+       <img src=" Mong005e.github.io/FullSizeRender (1).jpg" alt="Headshot of Drew" style="width:128px;height:128px;">
+      
     </div>  
     <div class="Education">
       <div id=content-prime>
