--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
         <p>Focus on HTML, CSS, Java, Java Script, and more.  This is a full stack engineering course designed specificially around the developer needs of Twin Cities employers.
         </p>   
       </div>
-      <div id=content-Kaplan>
+      <!--<div id=content-Kaplan>
         <h1>Kaplan University</h1> 
         <h2>Property, Causualty, Life, Accident, Health, Series 6 and 63 Liscenses</h2> 
         <p>MN liscensed insurance producer in multiple insurance lines in addition to securities and investments.  Graduated October, 2015.
         </p>   
       </div>
-    </div> 
+    </div> -->
    
-    <div class=professional>
+    <!----<div class=professional>
         <div id=content-Hendricksen>
         <h1>Hendricksen Insurance Agency</h1> 
         <h2>Sales Manager</h2> 
@@ -48,7 +48,7 @@
         <h2>Owner/Marketing Manager</h2> 
         <p>Created and Executed Partnership with Best Buy for marketing Best Buy Music, Distribution partnership with Sony Music USA, as well as day-to-day retail management.
         </p>   
-      </div> 
+      </div> --->
     </div>   
  
 
