--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <p>Driven creative problem solver who leads by example, and gets results.  Truly a "people-person" with a conviction that organizations are defined, and suceed by having quality individuals working toward a shared vision.  
 
     </div>
-    <!--<div class="headshot"> 
-       <img src=" Mong005e.github.io/FullSizeRender (1).jpg" alt="Headshot of Drew" style="width:128px;height:128px;">
+    <div class="headshot"> 
+       <!--<img src=" Mong005e.github.io/FullSizeRender (1).jpg" alt="Headshot of Drew" style="width:128px;height:128px;">-->
       
-    </div>  -->
+    </div>  
     <div class="Education">
       <div id=content-prime>
         <h1>Prime Digital Academy</h1> 
