--- a/index.html
+++ b/index.html
@@ -9,34 +9,28 @@
 <body> 
 
 
-<div class="Container">
-   <div class="content-contact">
+<div id="Container">
+   <img src=" Mong005e.github.io/FullSizeRender (1).jpg" alt="Headshot of Drew" style="width:128px;height:128px;" id="pic">
+   <div id="content-contact">
       <h1>Drew Hastings</h1>
       <h2>981 Patton Rd* New Brighton, MN 55112</h2>
       <h3>droo.hastings@gmail.com</h3>
       <p>Driven creative problem solver who leads by example, and gets results.  Truly a "people-person" with a conviction that organizations are defined, and suceed by having quality individuals working toward a shared vision.  
 
     </div>
-    <div class="headshot"> 
-       <img src=" Mong005e.github.io/FullSizeRender (1).jpg" alt="Headshot of Drew" style="width:128px;height:128px;">
-      
-    </div>  
-    <div class="Education">
-      <div id=content-prime>
-        <h1>Prime Digital Academy</h1> 
-        <h2>Software Engineering</h2> 
-        <p>Focus on HTML, CSS, Java, Java Script, and more.  This is a full stack engineering course designed specificially around the developer needs of Twin Cities employers.
-        </p>   
-      </div>
+   
       <!--<div id=content-Kaplan>
         <h1>Kaplan University</h1> 
         <h2>Property, Causualty, Life, Accident, Health, Series 6 and 63 Liscenses</h2> 
         <p>MN liscensed insurance producer in multiple insurance lines in addition to securities and investments.  Graduated October, 2015.
         </p>   
       </div>
-    </div> -->
+    </div> --->
    
-    <!----<div class=professional>
+    <div id=content-professional>
+       <div id="content-professionalheader">
+            Professional Experience
+            </div>
         <div id=content-Hendricksen>
         <h1>Hendricksen Insurance Agency</h1> 
         <h2>Sales Manager</h2> 
@@ -48,7 +42,7 @@
         <h2>Owner/Marketing Manager</h2> 
         <p>Created and Executed Partnership with Best Buy for marketing Best Buy Music, Distribution partnership with Sony Music USA, as well as day-to-day retail management.
         </p>   
-      </div> --->
+      </div> 
     </div>   
  
 
