--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
 <head>
 <title> Pork Chops </title>
 <link rel="stylesheet"  href="style.css" type="text/css"/>
-<link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
-   
+<link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
 </head>
 <body> 
 
 
 <div id="Container">
    
-   <div id="content-contact">
+   <div id="contact">
       <h1>Drew Hastings</h1>
-      <h2>981 Patton Rd* New Brighton, MN 55112</h2>
+      <h2>981 Patton Rd New Brighton, MN 55112</h2>
       <h3>droo.hastings@gmail.com</h3>
       <p>Driven creative problem solver who leads by example, and gets results.  Truly a "people-person" with a conviction that organizations are defined, and suceed by having quality individuals working toward a shared vision.  
 
