--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
       </div>
     </div> --->
    
-    <div id=content-professional>
-       <div id="content-professionalheader">
+    <div id="professiona"l>
+       <div id="professionalheader">
             Professional Experience
             </div>
-        <div id=content-Hendricksen>
+        <div id="Hendricksen">
         <h1>Hendricksen Insurance Agency</h1> 
         <h2>Sales Manager</h2> 
         <p>Responsible for meeting organization sales goals, providing training and guidance to sales staff, and maintaing ongoing continuing education certification for employees.
         </p>   
         </div> 
-        <div id=content-Sneaker>
+        <div id="Sneaker">
         <h1>Sneaker 2 Bombs, LLC</h1> 
         <h2>Owner/Marketing Manager</h2> 
         <p>Created and Executed Partnership with Best Buy for marketing Best Buy Music, Distribution partnership with Sony Music USA, as well as day-to-day retail management.
