--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
    
       <div id ="education">
-         <ol>Professional Licenses
+         <ul>Professional Licenses
             <li>Property Insurance </li>
             <li>Casualty Insurance </li>
             <li>Accident and Health Insurance </li>
@@ -57,7 +57,7 @@
             <li>Series 6 and 63 </li>
             <li> Ford Motor Company Master Certified </li>
             <li>GM Master Certified </li>
-         </ol>  
+         </ul>  
          
          <h10>Volunteer and Charitable Work</h10>
             <p> Member of the Bel Air Elementary Parent-Teacher Association.
