--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h2>981 Patton Rd New Brighton, MN 55112</h2>
       <h3>droo.hastings@gmail.com</h3>
       <p>Driven creative problem solver who leads by example, and gets results.  Truly a "people-person" with a conviction that organizations are defined, and suceed by having quality individuals working toward a shared vision.</p>
-      <img src="Mong005e.github.io/FullSizeRender (1).jpg" alt="Drew Headshot">
+      <img src="Mong005e.github.io/rsz_fullsizerender_1.jpg (1).jpg" alt="Drew Headshot">
    </div>
    
    
