--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
    
        <div id="professional-header">
           <h8> Professional Experience</h8>
+          border-top: 1px soldi #999;
        </div>
        
        <div id="hendricksen-header"> 
