--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       </div>
    
       <div id ="education">
+         <p> Prime Digital Academy - Software Engineering Focus </p>
          <ul>Professional Licenses
             <li>Property Insurance </li>
             <li>Casualty Insurance </li>
