--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    
    
    <div id="contact">
-      <h1>Drew Hastings</h1>
+      <h1>Droo Hastings</h1>
       <h2>981 Patton Rd New Brighton, MN 55112</h2>
       <h3>droo.hastings@gmail.com</h3>
       <p>Driven creative problem solver who leads by example, and gets results.  Truly a "people-person" with a conviction that organizations are defined, and suceed by having quality individuals working toward a shared vision.</p>
