--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <doctypehtml!>
 <html> 
 <head>
-<title> Pork Chops </title>
+<title> Resume </title>
 <link rel="stylesheet"  href="style.css" type="text/css"/>
 <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
 </head>
